fix: Fixed the placement of sticky total price div on larger screens. styles: Wrapped each form item section with a card.

--- a/src/app/pages/grocery-list/grocery-list.component.css
+++ b/src/app/pages/grocery-list/grocery-list.component.css
@@ -1,3 +1,4 @@
-.sticky-top {
-  top: 2em;
+.price-div {
+  box-shadow: none;
+  top: 6.25em;
 }
